--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="color_primary">@color/black</color>
+    <color name="color_secondary">@color/black_off</color>
+    <color name="color_variant">#80737272</color>
+    <color name="temp_min_color">#2e7d32</color>
+    <color name="temp_max_color">#ff5722</color>
 
+    <color name="green_200">#388e3c</color>
+    <color name="green_700">#1b5e20</color>
+    <color name="black">#FF000000</color>
+    <color name="black_off">#1b1d20</color>
+    <color name="card_background_color">@color/color_variant</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="white_off">#CCFFFFFF</color>
 
 </resources>
