--- a/app/src/main/res/drawable/list_background.xml
+++ b/app/src/main/res/drawable/list_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="16dp" />
+    <corners android:radius="@dimen/margin_16" />
     <solid android:color="@color/card_background_color" />
 
 
